spacing and background fix

--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -44,7 +44,7 @@
 	.quick-search-trigger
 		float: right
 		height: header-height
-		padding: 0 10px 0 8px
+		padding: 0 16px 0 8px
 		display: flex
 		align-items: center
 		@extend $big-font-size
@@ -56,7 +56,7 @@
 		height: header-height
 		display: flex
 		align-items: center
-		padding: 0 8px
+		padding: 0 8px 0 16px
 		overflow: hidden
 		text-decoration: none
 		@extend $functional-list
@@ -132,7 +132,7 @@ a.nav-title-wrap
 	.nav-title
 		text-transform: uppercase
 		@extend $small-font-size
-		padding-left: 8px
+		padding-left: 10px
 		overflow: hidden
 	&:hover
 		text-decoration: none
